# WinUtils

./: .gitignore  CMakeLists.txt  README.md  error.h  file.cpp  file.h  file_builder.cpp  file_builder.h  handle.cpp  handle.h  string_utils.h
WinUtils/: dir.cpp  dir.h  file.cpp  file.h  file_builder.cpp  file_builder.h
testing/: CMakeLists.txt  file_tests.h  main.cpp
testing/test_files/: readbytes_test.txt
